# Time-To-Prosper

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  todo.md
.cache/clangd/index/: app.cpp.A6BBF00B56635973.idx  app.h.4BA379B1A138C8F2.idx  city.h.66055E2539523334.idx  civPerk.h.FBA53FF213FDC1D7.idx  civilization.h.ACCC500E018665DD.idx  foodModifier.cpp.E813858BE55A7B5A.idx  foodModifier.h.48248EAB051D5E8C.idx  game.cpp.EFB45B8EA5CBAA9E.idx  gameState.cpp.047ACEBEA422A29E.idx  mainMenuState.cpp.82B2B1555C02C7B8.idx  menu.cpp.6E62C801C556EF84.idx  menu.cpp.A973F00C0261CA03.idx  menu.h.C835D4AD81F8F4E5.idx  modifiers.h.19E17C891BFC74A4.idx  settler.cpp.CADC3C5AD328267B.idx  settler.h.6D9DACED2BF32EF8.idx  stateMachine.cpp.B1630CE6F4261EF2.idx  stateMachine.cpp.F1CF63E3C2E9A903.idx  ttp.cpp.6E8FB69493788C7D.idx  unit.h.8542221403357A7A.idx
inc/: app.h  city.h  civLeader.h  civPerk.h  civilization.h  civilizationFactory.h  foodModifier.h  game.h  growth.h  leaderPerk.h  mainMenuState.h  menu.h  modifiers.h  settler.h  state.h  stateMachine.h  unit.h
local/: menu.json
save/: config.json
src/: menu.cpp  ttp.cpp
src/app/: app.cpp  menu.cpp
src/modifiers/: foodModifier.cpp
src/units/: settler.cpp
